Add CSS normalize to the main blog page, and add wrapper class to scss file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="nav-bar">
+            <div class="nav-logo">
+
+            </div>
+            <div class="nav-links">
+
+            </div>
+        </div>
+        <div class="main-site-header">
+            <h1>Blog Site Name</h1>
+        </div>
+    </header>
 </body>
 </html>
