--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home Page of Sass Project</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
     <header>
@@ -16,11 +16,14 @@
 
             </div>
             <div class="nav-links">
-
+                <a href="#">ABOUT</a>
             </div>
         </div>
         <div class="main-site-header">
-            <h1>Blog Site Name</h1>
+            <div class="main-site-header-content wrapper">
+                <h1>Blog Site Name</h1>
+            </div>
+
         </div>
     </header>
 </body>
