--- a/entry.html
+++ b/entry.html
@@ -7,7 +7,7 @@
     <title>Blog Entry</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
     <header>
@@ -16,11 +16,14 @@
 
             </div>
             <div class="nav-links">
-
+                <a href="#">ABOUT</a>
             </div>
         </div>
         <div class="main-site-header">
-            <h1>Blog Name</h1>
+            <div class="main-site-header-content wrapper">
+                <h1>Blog Name</h1>
+            </div>
+
         </div>
     </header>
     
