Layout the footer and the add social media links to it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page of Sass Project</title>
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./css/app.css">
 </head>
@@ -26,5 +26,16 @@
 
         </div>
     </header>
+
+    <footer>
+        <div class='wrapper'>
+            <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
+                <li><a href="#"><i class="fab fa-reddit-alien fa-lg"></i></a></li>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
