created multiple entry pages

--- a/entry1.html
+++ b/entry1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog Entry</title>
+    <title>Blog Entry 1</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./css/app.css">
@@ -21,7 +21,7 @@
         </div>
         <div class="main-site-header">
             <div class="main-site-header-content wrapper">
-                <h1>Blog Name</h1>
+                <h1>Blog Name 1</h1>
             </div>
 
         </div>
