--- a/entry3.html
+++ b/entry3.html
@@ -19,8 +19,8 @@
                 <a href="#">ABOUT</a>
             </div>
         </div>
-        <div class="main-site-header">
-            <div class="main-site-header-content wrapper">
+        <div class="smaller-header">
+            <div class="smaller-header-content wrapper">
                 <h1>Blog Name 3</h1>
             </div>
 
