completed employee cards

--- a/about.html
+++ b/about.html
@@ -27,43 +27,39 @@
         </div>
     </header>
 
-    <section class="about wrapper">
+    <section class="about">
         <div class="employee-card">
-            <div class="employee-card-img">
-                <img src="" alt="">
+            <div class="lucia">
             </div>
             <div class="employee-card-body">
-                <h2>Name</h2>
+                <h2>Lucia Longo</h2>
                 <h3>Job Title</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
             </div>
         </div>
         <div class="employee-card">
-            <div class="employee-card-img">
-                <img src="" alt="">
+            <div class="renald">
             </div>
             <div class="employee-card-body">
-                <h2>Name</h2>
+                <h2>Renald Qereshniku</h2>
                 <h3>Job Title</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
             </div>
         </div>
         <div class="employee-card">
-            <div class="employee-card-img">
-                <img src="" alt="">
+            <div class="shelagh">
             </div>
             <div class="employee-card-body">
-                <h2>Name</h2>
+                <h2>Shelagh Storla</h2>
                 <h3>Job Title</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
             </div>
         </div>
         <div class="employee-card">
-            <div class="employee-card-img">
-                <img src="" alt="">
+            <div class="tien">
             </div>
             <div class="employee-card-body">
-                <h2>Name</h2>
+                <h2>Tien Nguyen</h2>
                 <h3>Job Title</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
             </div>
