wired up about links on all pages

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
             </div>
             <div class="nav-links">
-                <a href="#">ABOUT</a>
+                <a href="./about.html">ABOUT</a>
             </div>
         </div>
         <div class="smaller-header">
