--- a/entry2.html
+++ b/entry2.html
@@ -16,7 +16,7 @@
 
             </div>
             <div class="nav-links">
-                <a href="#">ABOUT</a>
+                <a href="./about.html">ABOUT</a>
             </div>
         </div>
         <div class="smaller-header">
