added components from lucia-card branch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Home Page of Sass Project</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
@@ -25,7 +27,42 @@
             </div>
 
         </div>
+           
     </header>
+
+
+    <div class='wrapper'>  
+        <div class="blog-content">
+            <div class='box'>
+                <a href="#"><img src="./img/blog1.jpg" /></a>
+            </div>
+            <div class='blog-name'>
+                <h2><a href="blog.html">Blog Name</a></h2>
+                <h3>Jan 25, 2018</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
+            </div>  
+
+            <div class='box'>
+                <a href="#"><img src="./img/blog2.jpg" /></a>
+            </div>
+            <div class='blog-name'>
+                <h2><a href="blog.html">Blog Name</a></h2>
+                <h3>Jan 25, 2018</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
+            </div>  
+
+            <div class='box'>
+                <a href="#"><img src="./img/blog3.jpg" /></a>
+            </div>
+            <div class='blog-name'>
+                <h2><a href="blog.html">Blog Name</a></h2>
+                <h3>Jan 25, 2018</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
+            </div>  
+            
+        </div>  
+    </div>
+
 
     <footer>
         <div class='wrapper'>
