add link entry1, 2, 3

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#"><img src="./assets/img/blog1.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="blog.html">Blog Name</a></h2>
+                <h2><a href="entry1.html">Blog Name</a></h2>
                 <h3>Jan 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
@@ -46,7 +46,7 @@
                 <a href="#"><img src="./assets/img/blog2.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="blog.html">Blog Name</a></h2>
+                <h2><a href="entry2.html">Blog Name</a></h2>
                 <h3>Jan 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
@@ -55,7 +55,7 @@
                 <a href="#"><img src="./assets/img/blog3.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="blog.html">Blog Name</a></h2>
+                <h2><a href="entry3.html">Blog Name</a></h2>
                 <h3>Jan 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
