--- a/entry1.html
+++ b/entry1.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog Entry 1</title>
     
+
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./css/app.css">
 </head>
@@ -21,9 +23,10 @@
         </div>
         <div class="main-site-header">
             <div class="main-site-header-content wrapper">
+                <a href="./index.html">Back</a>
                 <h1>Blog Name 1</h1>
+                <p>January 25, 2018</p>
             </div>
-
         </div>
     </header>
     
@@ -63,6 +66,10 @@
         lacinia sollicitudin, augue libero dictum nulla, vitae semper odio velit et nisl. Etiam sit
         amet ipsum at leo fermentum posuere id quis leo.</p>
     </article>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
