--- a/entry3.html
+++ b/entry3.html
@@ -21,7 +21,9 @@
         </div>
         <div class="main-site-header">
             <div class="main-site-header-content wrapper">
+                <a href="./index.html">Back</a>
                 <h1>Blog Name 3</h1>
+                <p>January 25, 2018</p>
             </div>
 
         </div>
@@ -63,6 +65,10 @@
         lacinia sollicitudin, augue libero dictum nulla, vitae semper odio velit et nisl. Etiam sit
         amet ipsum at leo fermentum posuere id quis leo.</p>
     </article>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
