--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class='wrapper'>  
         <div class="blog-content">
             <div class='box'>
-                <a href="#"><img src="./assets/img/blog1.jpg" /></a>
+                <a href="entry1.html"><img src="./assets/img/blog1.jpg" /></a>
             </div>
             <div class='blog-name'>
                 <h2><a href="entry1.html">Blog Name</a></h2>
@@ -43,7 +43,7 @@
             </div>  
 
             <div class='box'>
-                <a href="#"><img src="./assets/img/blog2.jpg" /></a>
+                <a href="entry2.html"><img src="./assets/img/blog2.jpg" /></a>
             </div>
             <div class='blog-name'>
                 <h2><a href="entry2.html">Blog Name</a></h2>
@@ -52,7 +52,7 @@
             </div>  
 
             <div class='box'>
-                <a href="#"><img src="./assets/img/blog3.jpg" /></a>
+                <a href="entry3.html"><img src="./assets/img/blog3.jpg" /></a>
             </div>
             <div class='blog-name'>
                 <h2><a href="entry3.html">Blog Name</a></h2>
