--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="entry1.html"><img src="./assets/img/blog1.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="entry1.html">Blog Name</a></h2>
+                <h2><a href="entry1.html">Tech Tools</a></h2>
                 <h3>Jan 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
@@ -43,8 +43,8 @@
                 <a href="entry2.html"><img src="./assets/img/blog2.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="entry2.html">Blog Name</a></h2>
-                <h3>Jan 25, 2018</h3>
+                <h2><a href="entry2.html">Code and diversity</a></h2>
+                <h3>Feb 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
 
@@ -52,8 +52,8 @@
                 <a href="entry3.html"><img src="./assets/img/blog3.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="entry3.html">Blog Name</a></h2>
-                <h3>Jan 25, 2018</h3>
+                <h2><a href="entry3.html">Travelling and Turism</a></h2>
+                <h3>Mar 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
             
