--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="entry2.html"><img src="./assets/img/blog2.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="entry2.html">Code and diversity</a></h2>
+                <h2><a href="entry2.html">Code and Diversity</a></h2>
                 <h3>Feb 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
