really small spelling fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="entry3.html"><img src="./assets/img/blog3.jpg" /></a>
             </div>
             <div class='blog-name'>
-                <h2><a href="entry3.html">Travelling and Turism</a></h2>
+                <h2><a href="entry3.html">Travelling and Tourism</a></h2>
                 <h3>Mar 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
