--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 
     <div class='wrapper'>  
+        <!-- <div class= 'content'> -->
         <div class="blog-content">
             <div class='box'>
                 <a href="entry1.html"><img src="./assets/img/blog1.jpg" /></a>
@@ -56,7 +57,7 @@
                 <h3>Mar 25, 2018</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi corrupti praesentium adipisci doloremque laborum nobis repellendus ipsam impedit earum voluptates.</p>
             </div>  
-            
+        <!-- </div>     -->
         </div>  
     </div>
 
