--- a/about.html
+++ b/about.html
@@ -13,13 +13,15 @@
     <header>
         <div class="nav-bar">
             <div class="nav-logo">
-
+                <a href="./index.html">
+                <i class="fas fa-book-reader fa-3x"></i>
+                </a>
             </div>
             <div class="nav-links">
                 <a href="./about.html">ABOUT</a>
             </div>
         </div>
-        <div class="smaller-header">
+        <div class="smaller-header about-header">
             <div class="smaller-header-content wrapper">
                 <h1>ABOUT</h1>
             </div>
