--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <a href="./about.html">ABOUT</a>
             </div>
         </div>
-        <div class="smaller-header">
+        <div class="about-header">
             <div class="smaller-header-content wrapper">
                 <h1>ABOUT</h1>
             </div>
