--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="main-site-header">
               <div class="main-site-header-content wrapper">
-                <h1>Blog Site Name</h1>
+                <h1>Sass Project - Group 3</h1>
             </div>
         </div>
            
