--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="./about.html">ABOUT</a>
             </div>
         </div>
-        <div class="main-site-header">
-              <div class="main-site-header-content wrapper">
+        <div class="index-header">
+              <div class="index-header-content wrapper">
                 <h1>Sass Project - Group 3</h1>
             </div>
         </div>
