--- a/entry1.html
+++ b/entry1.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog Entry 1</title>
-    
 
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
@@ -22,8 +21,7 @@
             </div>
         </div>
 
-                
-        <div class="smaller-header">
+        <div class="smaller-header-1">
             <div class="smaller-header-content wrapper">
                 <a href="./index.html">Back</a>
                 <h1>Blog Name 1</h1>
