--- a/entry2.html
+++ b/entry2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog Entry 2</title>
     
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./css/app.css">
 </head>
@@ -20,13 +21,12 @@
             </div>
         </div>
 
-        <div class="smaller-header">
+        <div class="smaller-header-2">
             <div class="smaller-header-content wrapper">
                 <a href="./index.html">Back</a>
                 <h1>Blog Name 2</h1>
                 <p>January 25, 2018</p>
             </div>
-
         </div>
     </header>
     
