--- a/about.html
+++ b/about.html
@@ -12,12 +12,25 @@
 <body>
     <header>
         <div class="nav-bar">
-            <div class="nav-logo">
-
+            
+            <div class="nav-brand">
+                <div class="nav-logo">
+                    <a href="./index.html">
+                        <i class="fas fa-book-reader fa-2x"></i>
+                    </a>
+                </div>
+                <div class="nav-brand-name">
+                    <a href="./index.html">
+                        <p>Synthetic Charm</p>
+                    </a>
+                </div>
             </div>
+
             <div class="nav-links">
                 <a href="./about.html">ABOUT</a>
             </div>
+
+
         </div>
         <div class="about-header">
             <div class="smaller-header-content wrapper">
