added footer html across pages

--- a/entry1.html
+++ b/entry1.html
@@ -82,8 +82,15 @@
     </article>
 
     <footer>
-
-    </footer>
+            <div class='wrapper'>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-reddit-alien"></i></a></li>
+                </div>
+            </div>
+        </footer>
 
 </body>
 </html>
