--- a/entry3.html
+++ b/entry3.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog Entry 3</title>
-    
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./css/app.css">
 </head>
@@ -20,17 +21,17 @@
             </div>
         </div>
 
-        <div class="smaller-header">
+        <div class="smaller-header-3">
             <div class="smaller-header-content wrapper">
                 <a href="./index.html">Back</a>
-                <h1>Blog Name 3</h1>
-                <p>January 25, 2018</p>
+                <h1>Travelling and Tourism</h1>
+                <p>Mar 25, 2018</p>
             </div>
 
         </div>
     </header>
     
-    <article>
+    <article class="wrapper">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pretium nunc eget
         vehicula semper. Integer a accumsan mi. Nulla accumsan eget risus eget porttitor.
         Praesent congue pulvinar eros ut condimentum. Curabitur vel convallis dolor. Fusce vitae
@@ -68,8 +69,15 @@
     </article>
 
     <footer>
-
-    </footer>
+            <div class='wrapper'>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-reddit-alien"></i></a></li>
+                </div>
+            </div>
+        </footer>
 
 </body>
 </html>
