refactored some scss/updated logo/changed heading

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 </div>
         <div class="index-header">
               <div class="index-header-content wrapper">
-                <h1>Sass Project - Group 3</h1>
+                <h1>Synthetic Charm</h1>
+                <h2>Conversations in Tech</h2>
+                <h3>Sass Project - Group 3</h3>
             </div>
         </div>
            
