quick fix for the margin of the main content in the page (add a 'blog-content' div in the about page around the cards)

--- a/about.html
+++ b/about.html
@@ -40,41 +40,45 @@
     </header>
 
     <section class="wrapper">
-        <div class="card">
-            <div class="lucia">
+        <div class="blog-content">
+
+            <div class="card">
+                <div class="lucia">
+                </div>
+                <div class="card-body">
+                    <h2>Lucia Longo</h2>
+                    <h3>Job Title</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+                </div>
             </div>
-            <div class="card-body">
-                <h2>Lucia Longo</h2>
-                <h3>Job Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+            <div class="card">
+                <div class="renald">
+                </div>
+                <div class="card-body">
+                    <h2>Renald Qereshniku</h2>
+                    <h3>Job Title</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="renald">
+            <div class="card">
+                <div class="shelagh">
+                </div>
+                <div class="card-body">
+                    <h2>Shelagh Storla</h2>
+                    <h3>Job Title</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+                </div>
             </div>
-            <div class="card-body">
-                <h2>Renald Qereshniku</h2>
-                <h3>Job Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+            <div class="card">
+                <div class="tien">
+                </div>
+                <div class="card-body">
+                    <h2>Tien Nguyen</h2>
+                    <h3>Job Title</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="shelagh">
-            </div>
-            <div class="card-body">
-                <h2>Shelagh Storla</h2>
-                <h3>Job Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="tien">
-            </div>
-            <div class="card-body">
-                <h2>Tien Nguyen</h2>
-                <h3>Job Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, at a deleniti repellat ea illo accusantium exercitationem atque! Alias tenetur dolorem tempore, nobis earum culpa quis facere dolorum ut pariatur.</p>
-            </div>
+            
         </div>
     </section>
 
